Fixed the issues with pmds problems not being removed in last push